This file only list changes to game code.  Changes to content can be found here:

http://onehouronelife.com/updateLog.php




Version 419   2024-April-26

--Client displays current leader, and accepts leader vote, as github account
  name instead of email.

--tutorialEnabled setting now in contentSettings, and obeyed by client too.

--Windows client bundles now include OneLifeServer.

--Windows client bundles now included helper BAT scripts for AHAP Content
  Leader.

--Fixed frame-rate re-detect butto to actually show quit screen (when relaunch
  fails) on platforms like Windows that don't support auto-relaunch.

--Whoops, rogue countingOnVsync and targetFrameRate settings files were getting
  included in windows client builds by accident.  Build scripts now make sure
  those settings get removed.

--Fixed so that parts of rocket can be drawn behind player during take-off.




Server Fixes:

--ahapGate now receives leader votes, and returns current leader, using
  leader's Github account name instead of email.  Game server does the same.




Version 418   2024-April-22

--Fixed player swap in rocket animation that was being caused by passing
  pointer to an item in a mutable vector of players (so that if a player dies
  or joins and changes the vector, the player being pointed to would change).

--Added support for paste into fields in AHAP Settings (PLANET) screen.




Server Fixes:

--New tutorialEnabled setting for server, so AHAP servers can skip tutorial.

--Added rocketEnable server setting, to ensure that rockets can only take off
  from bigserver2.

--Fixed updateGate so that error message doesn't divulge content leader email.

--Support for Rode Rocket as cause of death in family tree server.




Version 416   2024-April-21

--Fixed a memory leak in transitionBank.

--Fixed crash if a soundBank sound is not mono and thus fails to load.

--Support for stereo OGG files in soundBank.
