@@ -68,7 +68,7 @@ cravings.cpp \
 offspringTracker.cpp \
 ipBanList.cpp \
 ahapGate.cpp \
-
+periodicPlacements.cpp \
 
 
 GAME_GRAPHICS = 
